--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3"
